--- a/client/src/assets/css/verification.css
+++ b/client/src/assets/css/verification.css
@@ -1,27 +1,31 @@
-#login-form {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 85vh;
+#verification {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 85vh;
 }
 
 #card {
-    padding-left: 1em;
-    padding-right: 1em;
-    width: 20vw;
-    background-color: white;
-    border-radius: 2%;
-    text-align: center;
-    border-style: solid;
-    border-color: grey;
+  padding-left: 1em;
+  padding-right: 1em;
+  width: 20vw;
+  background-color: white;
+  border-radius: 2%;
+  text-align: center;
+  border-style: solid;
+  border-color: grey;
 }
 
 #login-button {
-    margin-top: 1vh;
-    margin-bottom: 3vh;
-    width: 90%;
+  margin-top: 1vh;
+  margin-bottom: 3vh;
+  width: 90%;
 }
 
 #title {
-    margin: 0.5em 0 0 0;
+  margin: 0.5em 0 0 0;
+}
+
+.hidden {
+  display: none;
 }
