--- a/client/src/assets/css/verification.css
+++ b/client/src/assets/css/verification.css
@@ -15,6 +15,7 @@
 #card {
   padding-left: 1em;
   padding-right: 1em;
+  padding-bottom: 1vh;
   margin-bottom: 8%;
   width: 20vw;
   background-color: white;
@@ -22,9 +23,9 @@
   text-align: center;
 }
 
-#login-button {
+#submit-button {
   margin-top: 1vh;
-  margin-bottom: 3vh;
+  margin-bottom: 1vh;
   width: 90%;
 }
 
@@ -32,6 +33,7 @@
   margin: 0.5em 0 0 0;
 }
 
-.hidden {
-  display: none;
+#register-prompt {
+  display: block;
+  font-size: x-small;
 }
