--- a/client/src/assets/css/popup.css
+++ b/client/src/assets/css/popup.css
@@ -15,3 +15,11 @@
 .ck-editor__editable {
   font-size: small;
 }
+
+.clickable:hover {
+  cursor: pointer;
+}
+
+.project-owner {
+  background-color: yellow !important;
+}
