done project setting page

--- a/client/src/assets/css/project-settings.css
+++ b/client/src/assets/css/project-settings.css
@@ -6,6 +6,10 @@
   width: 50vw !important;
 }
 
-.title-field, .input-field, .center {
+.title-field, .input-field {
   text-align: center;
+}
+
+.full-width {
+  width: 100%;
 }
